update page title + fix chart horizontal scroll css

--- a/src/static/css/main.less
+++ b/src/static/css/main.less
@@ -125,7 +125,7 @@
 }
 
 .chart_wrapper {
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 
 .chart {
